# inteligencia-imobiliaria

./: .env.example  MARILIABOT_CHAT_SYNTHESIS.md  MARILIABOT_REFERENCE.md  README.md  pyproject.toml
.github/workflows/: pipeline.yml  weekly-report.yml
dashboard/: .env.example  package-lock.json  package.json
dashboard/src/: App.tsx  index.css  types.ts
dashboard/src/components/: ClassificationSummary.tsx  DecisionPanel.tsx  FilterBar.tsx  MapLegend.tsx  MarketBenchmarks.tsx  MarketCharts.tsx  OpportunitiesTable.tsx  PriceTrend.tsx  PropertyMap.tsx  Sidebar.tsx  StatCard.tsx  ViabilityCalculator.tsx
dashboard/src/contexts/: FilterContext.tsx
dashboard/src/hooks/: useFilteredData.ts  useSupabase.ts
dashboard/src/lib/: supabase.ts
sql/: 001_schema.sql  002_opportunities_unique.sql  003_rls_dashboard.sql  004_classification.sql  005_dedup_enhancements.sql  006_market_indices.sql  007_deal_velocity.sql  008_alerts_comps.sql  009_absorption.sql  010_sales_heat.sql  011_company_projects.sql  012_price_history_cross_platform.sql
src/: address.py  alerts.py  analyst.py  classifier.py  comps.py  config.py  db.py  deduplicator.py  enricher.py  enricher_llm.py  hunter.py  ibge.py  llm.py  main.py  market_heat.py  normalizer.py  notifier.py  price_model.py  reporter.py  risk_scorer.py  sales_tracker.py  scorer_llm.py  telegram_bot.py  trends.py  viability.py
src/collectors/: base.py  chavesnamao.py  creci.py  http.py  imovelweb.py  sinapi.py  toca.py  uniao.py  vivareal.py  zapimoveis.py
src/telegram/: ai.py  queries.py
