[project]
name = "mariliabot"
version = "0.1.0"
description = "Inteligência imobiliária para Marília-SP"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "supabase>=2.0",
    "python-dotenv>=1.0",
    "google-genai>=1.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "cloudscraper>=1.2",
    "rapidfuzz>=3.0",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
mariliabot = "src.main:main"
